--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,18 @@ strip = true
 
 [dependencies]
 anyhow = { version = "1.0.95", features = ["backtrace"] }
+async-trait = "0.1.85"
 base64ct = { version = "1.6.0", features = ["std", "alloc"] }
 clap = { version = "4.5", features = ["wrap_help", "derive", "cargo"] }
 clap_complete = "4.5.40"
 clap_mangen = "0.2.24"
+russh = "0.49.2"
 rustix = { version = "0.38.42", features = ["fs"] }
+shell-escape = "0.1.5"
 ssh-key = { version = "0.6.7", features = ["ed25519", "getrandom"] }
 sysinfo = "0.33.0"
 tempfile = "3.14.0"
+termion = "4.0.3"
 tokio = { version = "1.42.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread"] }
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }
