--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ sysinfo = "0.33.0"
 tempfile = "3.14.0"
 termion = "4.0.3"
 tokio = { version = "1.42.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread"] }
+tokio-util = "0.7.13"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }
 
