--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ base64ct = { version = "1.6.0", features = ["std", "alloc"] }
 clap = { version = "4.5", features = ["wrap_help", "derive", "cargo"] }
 clap_complete = "4.5.40"
 clap_mangen = "0.2.24"
+libc = { version = "0.2.169", default-features = false }
 russh = "0.49.2"
 rustix = { version = "0.38.42", features = ["fs"] }
 shell-escape = "0.1.5"
@@ -23,6 +24,7 @@ sysinfo = "0.33.0"
 tempfile = "3.14.0"
 termion = "4.0.3"
 tokio = { version = "1.42.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread"] }
+tokio-fd = "0.3.0"
 tokio-util = "0.7.13"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }
