--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,26 +8,32 @@ lto = true
 codegen-units = 1
 strip = true
 
+[profile.dev.package.sha2]
+opt-level = 3
+
 [dependencies]
-anyhow = { version = "1.0.95", features = ["backtrace"] }
 base64ct = { version = "1.6.0", features = ["std", "alloc"] }
 clap = { version = "4.5", features = ["wrap_help", "derive", "cargo"] }
 clap_complete = "4.5.40"
 clap_mangen = "0.2.24"
+color-eyre = "0.6.3"
+directories = "6.0.0"
+hex = "0.4.3"
 indicatif = "0.17.11"
 libc = { version = "0.2.169", default-features = false }
+nanoid = "0.4.0"
 rattler_digest = { version = "1.0.5", features = ["tokio"] }
 reqwest = "0.12.12"
 russh = "0.50"
 rustix = { version = "0.38.42", features = ["fs"] }
 shell-escape = "0.1.5"
 sysinfo = "0.33.0"
-tempfile = "3.14.0"
 termion = "4.0.3"
 tokio = { version = "1.42.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread"] }
 tokio-fd = "0.3.0"
 tokio-util = "0.7.13"
 tracing = { version = "0.1.41", features = ["log"] }
+tracing-error = "0.2.1"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }
 url = "2.5.4"
 
