--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ tracing = { version = "0.1.41", features = ["log"] }
 tracing-error = "0.2.1"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }
 url = "2.5.4"
+vhost = { version = "0.13.0", features = ["vhost-user-frontend"] }
+which = "7.0.2"
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
