--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ lto = true
 codegen-units = 1
 strip = true
 
+[profile.dev.package.sha2]]
+opt-level = 3
+
 [dependencies]
 base64ct = { version = "1.6.0", features = ["std", "alloc"] }
 clap = { version = "4.5", features = ["wrap_help", "derive", "cargo"] }
@@ -21,6 +24,7 @@ libc = { version = "0.2.169", default-features = false }
 rattler_digest = { version = "1.0.5", features = ["tokio"] }
 reqwest = "0.12.12"
 russh = "0.50"
+russh-config = "0.50.0"
 rustix = { version = "0.38.42", features = ["fs"] }
 shell-escape = "0.1.5"
 sysinfo = "0.33.0"
