--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,10 +22,11 @@ hex = "0.4.3"
 indicatif = "0.17.11"
 libc = { version = "0.2.169", default-features = false }
 pidfile2 = "0.1.1"
+qapi = { version = "0.15.0", features = ["qmp", "async-tokio-all"] }
+qcow2-rs = "0.1.6"
 rattler_digest = { version = "1.0.5", features = ["tokio"] }
 reqwest = "0.12.12"
 russh = "0.50"
-rustix = { version = "0.38.42", features = ["fs"] }
 shell-escape = "0.1.5"
 sysinfo = "0.33.0"
 tempfile = "3.17.0"
