Switch to async-walkdir and dir-lock to be more async
Our stuff was sync before.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,16 +12,18 @@ strip = true
 opt-level = 3
 
 [dependencies]
+async-walkdir = "2.1.0"
 base64ct = { version = "1.6.0", features = ["std", "alloc"] }
 clap = { version = "4.5", features = ["wrap_help", "derive", "cargo"] }
 clap_complete = "4.5.40"
 clap_mangen = "0.2.24"
 color-eyre = "0.6.3"
+dir-lock = "0.4.1"
 directories = "6.0.0"
+futures = { version = "0.3.31", default-features = false }
 hex = "0.4.3"
 indicatif = "0.17.11"
 libc = { version = "0.2.169", default-features = false }
-pidfile2 = "0.1.1"
 rattler_digest = { version = "1.0.5", features = ["tokio"] }
 reqwest = "0.12.12"
 russh = "0.50"
@@ -38,7 +40,6 @@ tracing-error = "0.2.1"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }
 url = "2.5.4"
 vhost = { version = "0.13.0", features = ["vhost-user-frontend"] }
-walkdir = "2.5.0"
 which = "7.0.2"
 
 [dev-dependencies]
