--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ dir-lock = "0.4.1"
 directories = "6.0.0"
 futures = { version = "0.3.31", default-features = false }
 hex = "0.4.3"
+humansize = "2.1.3"
 indicatif = "0.17.11"
 libc = { version = "0.2.169", default-features = false }
 rattler_digest = { version = "1.0.5", features = ["tokio"] }
@@ -41,6 +42,7 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time
 url = "2.5.4"
 vhost = { version = "0.13.0", features = ["vhost-user-frontend"] }
 which = "7.0.2"
+whoami = { version = "1.5.2", default-features = false }
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
