--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,13 @@
 [package]
 name = "vmexec"
 version = "0.1.0"
+description = "Run a single command in a speedy virtual machine with zero-setup"
+authors = ["Sven-Hendrik Haase <sven@svenstaro.org>"]
+repository = "https://github.com/svenstaro/vmexec"
+license = "MIT"
+readme = "README.md"
+keywords = ["vm", "virtual-machine"]
+categories = ["command-line-utilities", "virtualization"]
 edition = "2024"
 
 [profile.release]
