--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ opt-level = 3
 [dependencies]
 async-walkdir = "2.1.0"
 base64ct = { version = "1.6.0", features = ["std", "alloc"] }
+bytesize = "2.0.1"
 clap = { version = "4.5", features = ["wrap_help", "derive", "cargo"] }
 clap_complete = "4.5.40"
 clap_mangen = "0.2.24"
@@ -29,7 +30,6 @@ dir-lock = "0.4.1"
 directories = "6.0.0"
 futures = { version = "0.3.31", default-features = false }
 hex = "0.4.3"
-humansize = "2.1.3"
 indicatif = "0.17.11"
 libc = { version = "0.2.169", default-features = false }
 rattler_digest = { version = "1.0.5", features = ["tokio"] }
